# release-notes-generator

./: README.md  action.yml  pyproject.toml  run.sh
src/: main.py
